--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -11,20 +11,19 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout código
+      - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Instalar Node.js
+      - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '18'
+          node-version: '20'
 
-      - name: Instalar dependencias
+      - name: Install dependencies
         run: npm ci
 
-      - name: Instalar navegadores de Playwright
+      - name: Install Playwright Browsers
         run: npx playwright install --with-deps
 
-      - name: Ejecutar pruebas de Playwright
+      - name: Run Playwright tests
         run: npx playwright test
-
