--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -27,3 +27,10 @@ jobs:
 
       - name: Run Playwright tests
         run: npx playwright test
+
+      - name: Upload Playwright report
+        uses: actions/upload-artifact@v3
+        with:
+          name: playwright-report
+          path: playwright-report
+  
