--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -2,37 +2,27 @@ name: Playwright Tests
 
 on:
   push:
-    branches: [main]
+    branches: [ "main" ]
   pull_request:
-    branches: [main]
+    branches: [ "main" ]
 
 jobs:
   test:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-      - name: Set up Node.js
+      - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '20'
+          node-version: 18
 
       - name: Install dependencies
-        run: npm ci
+        run: npm install
 
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps
 
-      - name: Run Playwright tests with HTML Report
+      - name: Run Playwright tests
         run: npx playwright test
-
-      - name: List playwright-report contents
-        run: ls -l playwright-report || echo "No existe la carpeta playwright-report"
-
-      - name: Upload Playwright Report
-        uses: actions/upload-artifact@v2.3.1
-        with:
-          name: playwright-report
-          path: playwright-report/
