--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "description": "",
   "devDependencies": {
     "@playwright/test": "^1.52.0"
+  },
+  "dependencies": {
+    "dotenv": "^16.5.0"
   }
 }
-
