--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -3,8 +3,12 @@ name: Playwright Tests
 on:
   push:
     branches: [ "main" ]
+    paths:
+      - 'tests/smoke/**'
   pull_request:
     branches: [ "main" ]
+    paths:
+      - 'tests/smoke/**'
 
 jobs:
   test:
