--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -27,5 +27,8 @@ jobs:
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps     
 
-      - name: Run Playwright tests
-        run: npx playwright test
+      # - name: Run Playwright tests
+      #   run: npx playwright test
+
+      - name: Run only smoke tests
+        run: npx playwright test tests/smoke
