--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -32,3 +32,6 @@ jobs:
 
       - name: Run only smoke tests
         run: npx playwright test tests/smoke
+        env:
+            user: ${{ secrets.USER }}
+            pass: ${{ secrets.PASS }}
