--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -44,8 +44,7 @@ jobs:
         run: ls -la
             
       - name: Run only smoke tests
-        run:  USER=${{ secrets.USER }} PASS=${{ secrets.PASS }} npm test
-        # npx playwright test tests/smoke
+        run: npx playwright test tests/smoke
         env:
             USER: ${{ secrets.USER }}
             PASS: ${{ secrets.PASS }}
