--- a/.github/workflows/cipipeline.yml
+++ b/.github/workflows/cipipeline.yml
@@ -11,6 +11,8 @@ jobs:
         uses: actions/checkout@v3
         with:
           repository: daimilamoru/QA-Automation-Demo
+          token: ${{ secrets.GITHUB_TOKEN }}
+          path: QA-Automation-Demo
       
       - name: Configurar Node.js
         uses: actions/setup-node@v3
@@ -18,15 +20,13 @@ jobs:
           node-version: '18'
 
       - name: Instalar dependencias
+        working-directory: QA-Automation-Demo
         run: npm install
 
-      - name: Install Playwright Browsers
+      - name: Instalar navegadores Playwright
+        working-directory: QA-Automation-Demo
         run: npx playwright install --with-deps
 
-      - name: Ejecutar solo pruebas Smoke
+      - name: Ejecutar pruebas smoke
+        working-directory: QA-Automation-Demo
         run: npm test -- tests/smoke
-  
-      
-      
-      
-      
