--- a/.github/workflows/cipipeline.yml
+++ b/.github/workflows/cipipeline.yml
@@ -1,11 +1,11 @@
 name: CI Pipeline
 
 # on:
-#   workflow_dispatch
+#   workflow_dispatch # con esta opcion hay que ejecutarlo manualmente
 on:
     push:
       branches:
-        - main # Cambia 'main' por tu rama principal si es diferente (ej. 'master')
+        - main # Con esta opcion se ejecuta automaticamente 
 
 jobs:
   test:
